# boardgame-timer

./: .gitignore  Dockerfile  FEEDBACK.md  LICENSE  MANUAL_TESTS.md  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  skills-lock.json
boardgame_timer/: asgi.py  consumers.py  index.html  routing.py  session.py  settings.py  timer.py  urls.py  views.py  wsgi.py
boardgame_timer/static/css/: bootstrap-vue.css
boardgame_timer/static/js/: api_client.js  app.js  bootstrap-vue.js
frontend/: README.md  generate-icons.mjs  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.html  service-worker.ts
frontend/src/lib/: format.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/game/: +page.svelte
frontend/static/: manifest.webmanifest
game_sessions/: models.py
game_sessions/migrations/: 0001_initial.py
