[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.3)",
    "django-cors-headers (==4.7.0)",
    "gunicorn (==23.0.0)",
    "pytz (==2025.2)",
    "sqlparse (==0.5.3)",
    "whitenoise (==6.9.0)",
    "channels (>=4.0.0,<5.0.0)",
    "channels-redis (>=4.0.0,<4.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
